--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
   "author": "Arjun Sunar",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^3.3.7",
     "browserify": "^11.0.1",
     "gulp": "^3.9.0",
+    "gulp-concat": "^2.6.0",
     "gulp-connect": "^2.2.0",
     "gulp-open": "^1.0.0",
+    "jquery": "^3.1.1",
     "reactify": "^1.1.1",
     "vinyl-source-stream": "^1.1.0"
   }
