--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
     "gulp-connect": "^2.2.0",
+    "gulp-eslint": "^0.15.0",
     "gulp-open": "^1.0.0",
     "jquery": "^3.1.1",
     "reactify": "^1.1.1",
