--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "browserify": "^11.0.1",
+    "flux": "^2.0.3",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
     "gulp-connect": "^2.2.0",
     "gulp-eslint": "^0.15.0",
     "gulp-open": "^1.0.0",
     "jquery": "^3.1.1",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-router": "^3.0.2",
     "reactify": "^1.1.1",
     "vinyl-source-stream": "^1.1.0"
   }
