--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^15.4.2",
     "react-router": "^3.0.2",
     "reactify": "^1.1.1",
+    "toastr": "^2.1.0",
     "vinyl-source-stream": "^1.1.0"
   }
 }
